--- a/src/pages/lets_in/lets_in.html
+++ b/src/pages/lets_in/lets_in.html
@@ -5,16 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="lets_in.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>lets_in</title>
 </head>
 <body>
     <div id="lets-in-container">
-        <button class="social-btn facebook-btn">Sign in with Facebook</button>
-        <button class="social-btn google-btn">Sign in with Google</button>
-        <button class="social-btn apple-btn">Sign in with Apple</button>
+        <p style="font-size: 2.5rem; font-weight: 700; color: #246BFD;">Let's you in</p>
+        <div id="buttons-container">
+            <button class="btn secondary"><i class="ri-facebook-circle-line"></i>Sign in with Facebook</button>
+            <button class="btn secondary"><i class="ri-google-line"></i>Sign in with Google</button>
+            <button class="btn secondary"><i class="ri-apple-line"></i>Sign in with Apple</button>
+        </div>
         <label class="or-label">or</label>
-        <button class="sign-in-btn">Sign in with password</button>
-        <button class="sign-up-btn">Don't have an account? Sign up</button>
+        <button class="btn primary">Sign in with password</button>
+        <button class="btn ghost">
+            <p style="color: #8A8A8A;">Don't have an account?</p><p style="color: #246BFD;">Sign up</p>  
+        </button>
       </div>
 </body>
 </html>
